[tool.poetry]
name = "isc-book-maker"
version = "0.1.3"
description = ""
authors = ["Jacques Supcik <jacques.supcik@hefr.ch>"]
license = "Apache-2"
readme = "README.md"
repository = "https://github.com/supcik/isc-book-maker"
include = ["book.toml", "eisvogel.tex", "isc_book_maker/*.toml"]
packages = [{ include = "isc_book_maker" }]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
jinja2 = "^3.1.2"
colorlog = "^6.7.0"
psutil = "^5.9.5"
deepmerge = "^1.1.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.0.292,<0.1.12"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
book-maker = 'isc_book_maker.main:cli'

[tool.ruff]
select = ["E", "F", "B", "Q", "N", "I", "UP", "PL", "RUF", "C90"]
